# open_source

Quotes_Python_Django/: pyproject.toml
Quotes_Python_Django/hw_project/: db.sqlite3  django_email
Quotes_Python_Django/hw_project/hw_project/: settings.py  urls.py
Quotes_Python_Django/hw_project/quotes/: urls.py  views.py
Quotes_Python_Django/hw_project/quotes/migrations/: 0001_initial.py
Quotes_Python_Django/hw_project/quotes/templates/quotes/: index.html
Quotes_Python_Django/hw_project/quotes/templatetags/: extract.py
Quotes_Python_Django/hw_project/users/: forms.py  views.py
Quotes_Python_Django/hw_project/utils/: add_quotes_to_mongo.py
REST_API_FastAPI_11/: main.py  pyproject.toml
REST_API_FastAPI_11/migrations/versions/: 5fd913d19449_init.py
REST_API_FastAPI_11/src/entity/: models.py
REST_API_FastAPI_11/src/repository/: contacts.py
REST_API_FastAPI_11/src/routes/: contacts.py
REST_API_FastAPI_11/src/schemas/: contact.py
REST_FastAPI/: .coverage  main.py  pyproject.toml
REST_FastAPI/docs/: conf.py
REST_FastAPI/docs/_build/doctrees/: environment.pickle  index.doctree
REST_FastAPI/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
REST_FastAPI/docs/_build/html/_sources/: index.rst.txt
REST_FastAPI/migrations/versions/: e920d4f7bf54_init.py  fe7d433b1dcb_add_table_users.py
REST_FastAPI/postgres-data/: postmaster.pid
REST_FastAPI/postgres-data/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
REST_FastAPI/postgres-data/base/16384/: 1247  1249  1259  16389  16392  16394  16399  16401  16402  16404  16405  16406  16407  16408  16413  16414  16416  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  (+10 more)
REST_FastAPI/postgres-data/base/5/: pg_internal.init
REST_FastAPI/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
REST_FastAPI/src/repository/: contacts.py
REST_FastAPI/src/routes/: auth.py
REST_FastAPI/src/schemas/: contact.py  user.py
REST_FastAPI/src/services/: auth.py
REST_FastAPI/src/services/templates/: verify_email.html
REST_FastAPI/tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py  test_unit_repository_contact.py
goit-web22-hw-06/: connect.py  main.py  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
goit-web22-hw-07/: config.ini  main.py  pyproject.toml
goit-web22-hw-07/conf/: models.py
goit-web22-hw-07/seeds/: add_contacts.py  init.py
goit-web22-hw-07_/: config.ini  main.py  pyproject.toml
goit-web22-hw-07_/migrations/versions/: 22cda529a2db_init.py
goit-web22-hw-08/: Pipfile
goit-web22-hw-08/task_1/: main.py  models.py  seed.py
goit-web22-hw-08/task_2/: consumer.py  contact_model.py  producer.py
goit-web22-hw-09/: authors.json  main.py  models.py  pyproject.toml  seed.py
goit-web22-hw-10-django/: pyproject.toml
goit-web22-hw-10-django/hw_project/: db.sqlite3
goit-web22-hw-10-django/hw_project/hw_project/: settings.py
goit-web22-hw-10-django/hw_project/quotes/: forms.py  models.py
goit-web22-hw-10-django/hw_project/quotes/static/quotes/: style.css
goit-web22-hw-10-django/hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html
goit-web22-hw-10-django/hw_project/users/: urls.py
goit-web22-hw-10-django/hw_project/utils/: authors.json  export_from_mongo.py  import_to_postgres.py  migration.py  postgres.sql  quotes.json
goit-web22-hw-12/: .env  main.py  pyproject.toml
goit-web22-hw-12/migrations/versions/: 5404286ccba6_roles.py
goit-web22-hw-12/postgres-data/: postmaster.pid
goit-web22-hw-12/postgres-data/base/1/: pg_internal.init
goit-web22-hw-12/postgres-data/base/16384/: pg_internal.init
goit-web22-hw-12/postgres-data/base/5/: pg_internal.init
goit-web22-hw-12/postgres-data/global/: pg_internal.init
goit-web22-hw-12/postgres-data/pg_stat/: pgstat.stat
goit-web22-hw-12/src/conf/: config.py
goit-web22-hw-12/src/entity/: models.py
goit-web22-hw-12/src/routes/: auth.py
goit-web22-hw-12/src/schemas/: contact.py  user.py
goit-web22-hw-12/src/services/: auth.py  email.py
goit-web22-hw-13-FastAPI/: docker-compose.yml  pyproject.toml
goit-web22-hw-13-FastAPI/migrations/versions/: b4ed1ab2c60e_verify.py
(+5 files in other folders)
