[tool.poetry]
name = "quotes-python-django"
version = "0.1.0"
description = ""
authors = ["sologen1982 <sologen1982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
pymongo = "^4.8.0"
python-dateutil = "^2.9.0.post0"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
