[tool.poetry]
name = "rest-api-fastapi-11"
version = "0.1.0"
description = ""
authors = ["sologen1982 <sologen1982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
