[tool.poetry]
name = "goit-web22-hw-07"
version = "0.1.0"
description = ""
authors = ["sologen1982 <sologen1982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"
faker = "^25.2.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
